# fftconv

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  _test.cpp  bench_fftconv.json  bench_result.json  cost_func.py  debug_utils.hpp  fftconv.h  gen_input.py  hartley.py  meson.build  optimal_fft_size.csv  plot_bench.py  plot_bench_pocketfft.py  pyproject.toml  setup.py  test.cpp  test.py  test_utils.h  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
bench_results/: bench_results_20240706_m1.txt  bench_results_20240706_m1_v2.txt
benchmark/: CMakeLists.txt  bench.cpp  bench_fftconv.cpp  bench_hilbert.cpp  bench_pocketfft_hdr_thread.cpp  bench_result.json  meson.build
fftconv_fftw/: CMakeLists.txt  fftconv.cpp  fftconv.h  fftconv.hpp  fftw.hpp
fftconv_fftw/fft/: common.hpp  fft_accelerate.hpp
fftconv_pocketfft/: CMakeLists.txt  fftconv_pocket.h  fftconv_pocket.hpp  pocketfft_hdronly.h
include/: fftconv.h
include/fftconv/: aligned_vector.hpp  fftconv.hpp  fftw.hpp  hilbert.hpp
py/: CMakeLists.txt  main.cpp  meson.build
py/bench/: bench.py  bench_nd.py
py/pyfftconv/: __init__.py  __init__.pyi  _pyfftconv.pyi
py/test/: test_conv.py  test_fftconv.py  test_fftconv2d.py  test_fftconv3d.py  test_hilbert.py
pyfftconv/: CMakeLists.txt  cfftconv.pxd  fftconv.cpp  fftconv.html  fftconv.pyx  wrapper.cpp
scripts/: run_bench.sh  run_bench_pocketfft_hdr_thread.sh  run_profiler.sh
src/: fftconv.cpp  fftconv.h
src_pocketfft/: fftconv.cpp  fftconv_pocket.h
test/: CMakeLists.txt  meson.build  test.cpp  test_common.hpp  test_fftconv.cpp  test_fftconv2d.cpp  test_fftconv3d.cpp  test_fftw.cpp  test_helpers.hpp  test_hilbert.cpp  test_script.cpp
tools/: fftw_buffer.natviz
