[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pyfftconv"
version = "0.5.0"
description = "A Python wrapper for FFT-based convolution and hilbert transform using FFTW"
authors = [{ name = "Taylor Nie", email = "tnie@tuta.io" }]
dependencies = ["numpy"]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
homepage = "https://github.com/kwsp/fftconv"


[tool.scikit-build]
minimum-version = "build-system.requires"
logging.level = "INFO"

cmake.version = ">=3.20"
cmake.args = [
    "--preset=clang",
    "-GNinja",        # -GNinja overrides the "Ninja Multi-Config" defined in the preset
]
cmake.build-type = "Release"
cmake.source-dir = "."

build.verbose = true
build.targets = ["_pyfftconv"]

wheel.packages = ["py/pyfftconv"]
