[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pyfftconv"
version = "0.5.1"
description = "A Python wrapper for FFT-based convolution and hilbert transform using FFTW"
authors = [{ name = "Taylor Nie", email = "tnie@tuta.io" }]
dependencies = ["numpy"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
homepage = "https://github.com/kwsp/fftconv"

[tool.scikit-build]
minimum-version = "build-system.requires"
logging.level = "INFO"

cmake.version = ">=3.20"
cmake.args = [
    "--preset=clang",
    "-GNinja",        # -GNinja overrides the "Ninja Multi-Config" defined in the preset
]
cmake.build-type = "Release"
cmake.source-dir = "."

build.verbose = true
build.targets = ["_pyfftconv"]

wheel.packages = ["py/pyfftconv"]
