[build-system]
requires = ["meson-python", "pybind11"]
build-backend = "mesonpy"

[project]
name = "pyfftconv"
version = "0.5.1"
description = "A Python wrapper for FFT-based convolution and hilbert transform using FFTW"
authors = [{ name = "Taylor Nie", email = "tnie@tuta.io" }]
dependencies = ["numpy"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
homepage = "https://github.com/kwsp/fftconv"
